--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,11 @@ name = "pypi"
 
 [packages]
 pandas = "*"
+pytest = "*"
+openpyxl = "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
 python_version = "3.10"
